[metadata]
name = swntools
version = 0.1
description = My package description
long_description = file: README.md #, CHANGELOG.rst, LICENSE.rst
# license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
scripts =
    src/swntools.py
install_requires =
    python_log_indenter
    dice
    inflect
