[metadata]
name = swntools
version = 0.1
url = https://github.com/tm-shad/SWN-Tools
author = Troy Murray
email = mail@troymurray.dev
description = My package description
long_description = file: README.md #, CHANGELOG.rst, LICENSE.rst
# license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
 =src
packages = find:
install_requires =
    python_log_indenter
    dice
    inflect

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    swntools = swntools.swntools:run
