[metadata]
name = cfg
version = 0.2
url = https://github.com/tm-shad/SWN-Tools
author = Troy Murray
email = mail@troymurray.dev
description = Scripts build for the Stars Without Number rpg
long_description = file: README.md, LICENSE
license = GNU General Public License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
 = src
packages = find:
install_requires =
    python_log_indenter
    dice
    inflect

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
   swntools = swntools.swntools:run

[flake8]
ignore = E203, E266, E501, W503, F403, F401, B950, D202, D100, D104
max-line-length = 120
max-complexity = 18
select = B,C,D,E,F,W,N,T4,B9
docstring-convention=google

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=120

[tool:pytest]
testpaths=tests

[coverage:run]
source = src

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
